# Votraxxion

./: .gitignore  CLAUDE.md  README.md  Tech overview.md  pyproject.toml  setup.py
csrc/: bindings.cpp  filters.h  rom_data.h  votrax_core.h
nvda-addon/: manifest.ini  package.py
nvda-addon/addon/synthDrivers/: votrax.py
packaging/: installer.iss  make_release.py  votrax-gui.spec  votrax_workbench_launcher.py
presets/factory/: as_schematic.json  breathy_lf.json  chipmunk.json  default.json  natural_lf.json  phoneme_playground.json  slow_robot.json  soft_plosives.json
py_emu/: __init__.py  chip.py  filters.py
pyvotrax/: __init__.py  __main__.py  chip.py  constants.py  filters.py  gui.py  phonemes.py  presets.py  rom.py  synth.py  tts.py
tests/: test_chip.py  test_enhanced_dsp.py  test_filters.py  test_gui.py  test_overrides.py  test_presets.py  test_py_emu.py  test_rom.py  test_synth.py  test_tts.py
