[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "pyvotrax"
version = "0.1.0"
description = "Votrax SC-01A speech synthesizer DSP emulator"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.21",
    "scipy>=1.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
]
