[build-system]
requires = ["setuptools>=64", "pybind11>=2.11"]
build-backend = "setuptools.build_meta"

[project]
name = "pyvotrax"
version = "0.2.0"
description = "Votrax SC-01A speech synthesizer DSP emulator"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.21",
    "scipy>=1.7",
    "cmudict>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pybind11>=2.11",
]
gui = [
    "wxPython>=4.2",
    "sounddevice",
]

[tool.setuptools.packages.find]
include = ["pyvotrax*"]

[project.scripts]
votrax-gui = "pyvotrax.gui:main"
